# mt42fastapi

./: README.md  main.py  pyproject.toml
